--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -54,7 +54,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HighScore.cs" />
-    <Compile Include="Memory.cs" />
+    <Compile Include="Memory.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -83,6 +86,54 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\banana.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\donkey.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\monkey.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\racoon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\ram.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\spider.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\tiger.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\wolf.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\zebra.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\book.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\bug.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\car.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\monkey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\tornado.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\tree.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Animals\wine.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
