--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -46,7 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,9 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HighScore.cs" />
-    <Compile Include="Memory.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Memory.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
