--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameOptions.cs" />
     <Compile Include="HighScore.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="MyExtensions.cs" />
