--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -50,6 +50,9 @@
     <Compile Include="CardPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Dir.cs" />
+    <Compile Include="Encryptor.cs" />
+    <Compile Include="Files.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +63,7 @@
     <Compile Include="HighScore.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="MyExtensions.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,6 +71,8 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\MemoryGame.Form1.resources" />
+    <EmbeddedResource Include="obj\Debug\MemoryGame.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -77,6 +83,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="bin\Debug\MemoryGame.exe.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\MemoryGame.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\MemoryGame.csproj.GenerateResource.cache" />
+    <None Include="obj\Debug\MemoryGame.csprojAssemblyReference.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -161,6 +172,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\LOTR\SwordWieldingLotrGuy.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\MemoryGame.exe" />
+    <Content Include="bin\Debug\MemoryGame.pdb" />
+    <Content Include="obj\Debug\MemoryGame.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\MemoryGame.exe" />
+    <Content Include="obj\Debug\MemoryGame.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
