--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -66,7 +66,6 @@
     <Compile Include="HighScore.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="MyExtensions.cs" />
-    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,8 +73,6 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="obj\Debug\MemoryGame.Form1.resources" />
-    <EmbeddedResource Include="obj\Debug\MemoryGame.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -87,10 +84,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="bin\Debug\MemoryGame.exe.config" />
-    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <None Include="obj\Debug\MemoryGame.csproj.CoreCompileInputs.cache" />
-    <None Include="obj\Debug\MemoryGame.csproj.GenerateResource.cache" />
-    <None Include="obj\Debug\MemoryGame.csprojAssemblyReference.cache" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -180,12 +173,9 @@
   <ItemGroup>
     <Content Include="bin\Debug\MemoryGame.exe" />
     <Content Include="bin\Debug\MemoryGame.pdb" />
-    <Content Include="obj\Debug\MemoryGame.csproj.FileListAbsolute.txt" />
-    <Content Include="obj\Debug\MemoryGame.exe" />
-    <Content Include="obj\Debug\MemoryGame.pdb" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="obj\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
