--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -70,6 +70,11 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ScoreBoard.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -78,14 +83,9 @@
     <EmbeddedResource Include="obj\Debug\MemoryGame.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="bin\Debug\MemoryGame.exe.config" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="obj\Debug\MemoryGame.csproj.CoreCompileInputs.cache" />
@@ -180,6 +180,81 @@
   <ItemGroup>
     <Content Include="bin\Debug\MemoryGame.exe" />
     <Content Include="bin\Debug\MemoryGame.pdb" />
+    <Content Include="images\Animals\041418_reviews_animals_main.jpg" />
+    <Content Include="images\Animals\112402-rabbit-lucky-animals-510x600.jpg" />
+    <Content Include="images\Animals\14672787_web1_Orca-Valdes.jpg" />
+    <Content Include="images\Animals\16SCI-WAR-01-superJumbo.jpg" />
+    <Content Include="images\Animals\381b32629f927376de5b3e3b8fd207c0.jpg" />
+    <Content Include="images\Animals\502e4a1e-0dc0-4d6c-a580-70c6bdfc47fa.jpg" />
+    <Content Include="images\Animals\5Bla3W39.png" />
+    <None Include="images\Animals\aussie.jpg" />
+    <None Include="images\Animals\black wolf.jpg" />
+    <Content Include="images\Animals\c3npbx.jpg" />
+    <None Include="images\Animals\cavia.jpg" />
+    <Content Include="images\Animals\cavia_gras2.jpg" />
+    <None Include="images\Animals\cheetah.jpg" />
+    <None Include="images\Animals\deer.png" />
+    <Content Include="images\Animals\dog-606281_1920-1024x768.jpg" />
+    <None Include="images\Animals\egel.jpg" />
+    <None Include="images\Animals\elephant.jpg" />
+    <Content Include="images\Animals\file-20180627-112641-idgmo2.jpg" />
+    <Content Include="images\Animals\GettyImages-1186139572-5116e77daa4a4c27a8821329bd784504.jpg" />
+    <Content Include="images\Animals\gettyimages-168504892-1568303467.png" />
+    <Content Include="images\Animals\GettyImages-dv735012-0663e2057be948d1b8a906c8fdfa97a2.jpg" />
+    <None Include="images\Animals\giraffe.jpg" />
+    <None Include="images\Animals\gorilla.jpg" />
+    <Content Include="images\Animals\Great-White-Shark-Smile.jpg" />
+    <None Include="images\Animals\horse.jpg" />
+    <Content Include="images\Animals\im-218281.jpg" />
+    <Content Include="images\Animals\janet-the-polar-bear-nanuk-polar-bear-lodge-george-turner-photo.jpg" />
+    <Content Include="images\Animals\love-animals-e1558315672833-new.jpg" />
+    <Content Include="images\Animals\MARK_GLOVER_2009B_194971.jpg" />
+    <Content Include="images\Animals\NationalGeographic_1561927_16x9.jpg" />
+    <None Include="images\Animals\oerangutan.jpg" />
+    <None Include="images\Animals\orca.jpg" />
+    <None Include="images\Animals\parrot.jpg" />
+    <None Include="images\Animals\penguin.jpg" />
+    <None Include="images\Animals\polar bear.jpg" />
+    <None Include="images\Animals\rabbit.jpg" />
+    <Content Include="images\Animals\red canary.jpg" />
+    <None Include="images\Animals\red panda.jpg" />
+    <None Include="images\Animals\rhino.jpg" />
+    <Content Include="images\Animals\rome-wild-animals-reclaim-palatine-hill.jpg" />
+    <Content Include="images\Animals\s960_pexels-frans-van-heerden-802112.jpg" />
+    <None Include="images\Animals\seal.jpg" />
+    <None Include="images\Animals\shark.jpg" />
+    <None Include="images\Animals\sloth.jpg" />
+    <None Include="images\Animals\tiger.png" />
+    <None Include="images\Animals\turtle.jpg" />
+    <None Include="images\Animals\ugly fish.jpg" />
+    <Content Include="images\Animals\xrainbowlorikeet-2.jpg.pagespeed.ic.ePoxQcNwjc.jpg" />
+    <Content Include="images\Animals\XZHuHLNb_400x400.jpg" />
+    <Content Include="images\Animals\__opt__aboutcom__coeus__resources__content_migration__mnn__images__2016__09__cute-baby-gorilla-f93adf4bb23f440abf18448456e1c435.jpg" />
+    <Content Include="images\LOTR\LOTR\16155_1920x1080.jpg" />
+    <Content Include="images\LOTR\LOTR\28397b01e582052cd52850bc4299d337.jpg" />
+    <Content Include="images\LOTR\LOTR\28b98f7cdce838278d683d3b809c8f1e.jpg" />
+    <Content Include="images\LOTR\LOTR\2c8287f8-7d84-11e6-8163-e23f72623fcf.jpg" />
+    <Content Include="images\LOTR\LOTR\42686906a7bfd5e4acd29eb42df25bd7.jpg" />
+    <Content Include="images\LOTR\LOTR\6f0e2103d5e221e10f15f67be24ac563.jpg" />
+    <Content Include="images\LOTR\LOTR\7e47327e-d9f7-4c17-a665-c03f548f090f.png" />
+    <Content Include="images\LOTR\LOTR\a8d8d9876c12dd49ac8fb28d704e8871.jpg" />
+    <Content Include="images\LOTR\LOTR\ad18b2d132f0d99ebcd17c7684112a73.jpg" />
+    <Content Include="images\LOTR\LOTR\c9204f7bcf022e188b3fa3568eda9c8e.jpg" />
+    <Content Include="images\LOTR\LOTR\DOiAi2WUEAE3A1Y.0.jpg" />
+    <Content Include="images\LOTR\LOTR\efbe10798f1bc561d785015251fc4e9b.jpg" />
+    <Content Include="images\LOTR\LOTR\Elrond11.jpg" />
+    <Content Include="images\LOTR\LOTR\Eomer_-_Close_up.PNG.png" />
+    <Content Include="images\LOTR\LOTR\Eowyn.jpg" />
+    <Content Include="images\LOTR\LOTR\Faramir_in_Two_Towers.png" />
+    <Content Include="images\LOTR\LOTR\Galadriel.jpg" />
+    <Content Include="images\LOTR\LOTR\Gandalf.jpg" />
+    <Content Include="images\LOTR\LOTR\Gimli-is-a-Joke.jpg" />
+    <Content Include="images\LOTR\LOTR\Hobbit-Smaug-Poster-Legolas-header.jpg" />
+    <Content Include="images\LOTR\LOTR\icm_fullxfull.136120005_ijj0d54yu5cggokow00k_1024x1024%402x.jpg" />
+    <Content Include="images\LOTR\LOTR\Lieutenant_Gothmog.jpg" />
+    <Content Include="images\LOTR\LOTR\lord-of-the-rings-sean-bean-boromir-1584636601.jpg" />
+    <Content Include="images\LOTR\LOTR\samwise.jpg" />
+    <Content Include="images\LOTR\LOTR\Screen_Shot_2016-08-11_at_1.01.20_PM.png" />
     <Content Include="obj\Debug\MemoryGame.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\MemoryGame.exe" />
     <Content Include="obj\Debug\MemoryGame.pdb" />
